logs/dag_id=covid_data_dag_postgres_plis/run_id=manual__2023-11-19T111856.808445+0000/task_id=staging.create_cases_deaths_table/attempt=1.log
[2023-11-19T11:20:36.091+0000] {taskinstance.py:1157} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: covid_data_dag_postgres_plis.staging.create_cases_deaths_table manual__2023-11-19T11:18:56.808445+00:00 [queued]>
[2023-11-19T11:20:36.197+0000] {taskinstance.py:1157} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: covid_data_dag_postgres_plis.staging.create_cases_deaths_table manual__2023-11-19T11:18:56.808445+00:00 [queued]>
[2023-11-19T11:20:36.199+0000] {taskinstance.py:1359} INFO - Starting attempt 1 of 2
[2023-11-19T11:20:36.305+0000] {taskinstance.py:1380} INFO - Executing <Task(PostgresOperator): staging.create_cases_deaths_table> on 2023-11-19 11:18:56.808445+00:00
[2023-11-19T11:20:36.392+0000] {standard_task_runner.py:57} INFO - Started process 1925 to run task
[2023-11-19T11:20:36.472+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'covid_data_dag_postgres_plis', 'staging.create_cases_deaths_table', 'manual__2023-11-19T11:18:56.808445+00:00', '--job-id', '1184', '--raw', '--subdir', 'DAGS_FOLDER/Dag_postgres.py', '--cfg-path', '/tmp/tmplz89gsc0']
[2023-11-19T11:20:36.537+0000] {standard_task_runner.py:85} INFO - Job 1184: Subtask staging.create_cases_deaths_table
[2023-11-19T11:20:37.155+0000] {task_command.py:415} INFO - Running <TaskInstance: covid_data_dag_postgres_plis.staging.create_cases_deaths_table manual__2023-11-19T11:18:56.808445+00:00 [running]> on host 172.21.0.3
[2023-11-19T11:20:37.356+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='covid_data_dag_postgres_plis' AIRFLOW_CTX_TASK_ID='staging.create_cases_deaths_table' AIRFLOW_CTX_EXECUTION_DATE='2023-11-19T11:18:56.808445+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-11-19T11:18:56.808445+00:00'
[2023-11-19T11:20:37.362+0000] {sql.py:274} INFO - Executing: CREATE TABLE IF NOT EXISTS cases_deaths (
    Date_reported DATE,
    Country VARCHAR(255),
    Country_code VARCHAR(255)
    WHO_region VARCHAR(255),
    New_cases INTEGER,
    Cumulative_cases INTEGER,
    New_deaths INTEGER,
    Cumulative_deaths INTEGER,
    Weekly_cases INTEGER,
    Weekly_deaths INTEGER,
    Weekly_pct_growth_cases FLOAT,
    Weekly_pct_growth_deaths FLOAT,
    population INTEGER,
    New_cases_per_million FLOAT,
    New_deaths_per_million FLOAT,
    Cumulative_cases_per_million FLOAT,
    Cumulative_deaths_per_million FLOAT,
    Weekly_cases_per_million FLOAT,
    Weekly_deaths_per_million FLOAT,
);
[2023-11-19T11:20:37.420+0000] {base.py:73} INFO - Using connection ID 'postgres_default' for task execution.
[2023-11-19T11:20:37.454+0000] {base.py:73} INFO - Using connection ID 'postgres_default' for task execution.
[2023-11-19T11:20:37.461+0000] {sql.py:418} INFO - Running statement: CREATE TABLE IF NOT EXISTS cases_deaths (
    Date_reported DATE,
    Country VARCHAR(255),
    Country_code VARCHAR(255)
    WHO_region VARCHAR(255),
    New_cases INTEGER,
    Cumulative_cases INTEGER,
    New_deaths INTEGER,
    Cumulative_deaths INTEGER,
    Weekly_cases INTEGER,
    Weekly_deaths INTEGER,
    Weekly_pct_growth_cases FLOAT,
    Weekly_pct_growth_deaths FLOAT,
    population INTEGER,
    New_cases_per_million FLOAT,
    New_deaths_per_million FLOAT,
    Cumulative_cases_per_million FLOAT,
    Cumulative_deaths_per_million FLOAT,
    Weekly_cases_per_million FLOAT,
    Weekly_deaths_per_million FLOAT,
);, parameters: None
[2023-11-19T11:20:37.474+0000] {taskinstance.py:1935} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "WHO_region"
LINE 5:     WHO_region VARCHAR(255),
            ^

[2023-11-19T11:20:37.538+0000] {taskinstance.py:1398} INFO - Marking task as UP_FOR_RETRY. dag_id=covid_data_dag_postgres_plis, task_id=staging.create_cases_deaths_table, execution_date=20231119T111856, start_date=20231119T112036, end_date=20231119T112037
[2023-11-19T11:20:37.583+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 1184 for task staging.create_cases_deaths_table (syntax error at or near "WHO_region"
LINE 5:     WHO_region VARCHAR(255),
            ^
; 1925)
[2023-11-19T11:20:37.632+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-11-19T11:20:37.975+0000] {taskinstance.py:2776} INFO - 0 downstream tasks scheduled from follow-on schedule check
